center and margin fix on mobile video title

--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -132,4 +132,7 @@
 
 .mobile-title {
   margin-top: -5px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 320px;
 }
